Fix Issue #6 - Title navbar & div overlap, alignment issue in mobile mode of contributors page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -681,7 +681,7 @@ a.anchor-special:hover,a.anchor-special:active{
 
 .team-member{
 	position:relative;
-	margin:auto;
+	margin:0 auto;
 	width:150px;
 	height:150px;
 	border-radius:100%;
@@ -690,14 +690,11 @@ a.anchor-special:hover,a.anchor-special:active{
 }
 
 .team{
-    position:inline-block;
-    float:left;
-	width:235px;
+    position:relative;
 	height:370px;
 	padding-top:20px;
-	margin-top:30px;
-	margin-right:30px;
-	margin-left:10px;
+	margin-bottom:30px;
+	margin-left:auto;
 	box-shadow: 5px 5px 10px gray;
 	transition: background-color 0.2s ease-in,color 0.2s ease-in;
 }
@@ -724,4 +721,12 @@ ul.social-icons i.i-special:hover{
 
 h2.title{
     margin-bottom:10px !important;
+}
+
+header#header{
+    z-index:1 !important;
+}
+
+section#promo{
+    z-index:0 !important;
 }
